correciones a app.php y a controller.php

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </p>
   <iframe src="target.html"></iframe> 
 </section>
- <form action="controller.php" method="post">
+ <form action="controller.php" method="get">
   	<p>presiona el boton para insertar </p>
   	<input type="submit" value="cambio!"/> 
   </form>
