--- a/target.html
+++ b/target.html
@@ -4,9 +4,20 @@
 	<meta charset="utf-8">
 	<title>pagina target</title>
 	<link rel="stylesheet" href="css/style.css">
+	
 </head>
 <body>
 <header>  
+<nav>
+  <h1>&#9668;ENKONDUKI&#9658;</h1>
+  <ul>
+    <li><a href="#">Inicio</a></li>
+    <li><a href="#">Servicios</a></li>
+    <li><a href="#">Equipo</a></li>
+    <li><a href="#">Contacto</a></li>
+  </ul>
+</nav>
+</header>  
 <section>
   <h1>Hola Mundo</h1>
   <p>
@@ -16,5 +27,13 @@
   <div class="push"></div>
 </div>
 <footer>
- </body>
+  <ul>
+    <li><a href="#">Inicio</a></li>
+    <li><a href="#">Servicios</a></li>
+    <li><a href="#">Equipo</a></li>
+    <li><a href="#">Contacto</a></li>
+  </ul>
+  <p>Copyright &#174;	 2013</p>
+</footer>
+  </body>
 </html>
